# ELEC330-Turtle-on-Land

./: .gitignore  README.md
BoM/: Parts List.xlsx  readme
Code/: readme
Code/Assignment3Package/turtle/: CMakeLists.txt  README.md  package.xml
Code/Assignment3Package/turtle/ColourDetect/: rgb3 (Copy).py
Code/Assignment3Package/turtle/config/: efk.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_kaede.yaml  twist_mux.yaml
Code/Assignment3Package/turtle/gazebo/: turtle.gazebo.xacro
Code/Assignment3Package/turtle/launch/: Rlaunch.py
Code/Assignment3Package/turtle/meshes/collision/: Front_left1.STL  Front_right1.STL
Code/Assignment3Package/turtle/meshes/visual/: Front_right2.STL  base_link.STL
Code/Assignment3Package/turtle/rviz/: rviz_basic_settings.rviz
Code/Assignment3Package/turtle/scripts/: BoundingBox_callback.py  auto_explore.py  pid_cmd_vel_controller.py  target2navgoal.py
Code/Assignment3Package/turtle/urdf/: URDF1.urdf.xacro  gazebo_control.xacro
Code/Assignment3Package/turtle/world/: Senario_1.sdf  fws_robot_world.sdf  fws_robot_world_2.sdf  fws_robot_world_3.sdf  slam_simple.world  world2.sdf  world3.sdf
Code/Attempts/Frames/: frames_2025-01-29_11.59.55.gv  frames_2025-03-19_11.32.55.gv
Code/Attempts/Launch/: launch.py  launch_10_14.py
Code/Attempts/Nav/: auto_nevigation.py
Code/Attempts/Nav/turtle/: CMakeLists.txt  package.xml
Code/Attempts/Nav/turtle/ColourDetect/: rgb3.py  rgb3copy.py
Code/Attempts/Nav/turtle/ColourDetect/install/: local_setup.sh  setup.sh
Code/Attempts/Nav/turtle/ColourDetect/log/: latest_build
Code/Attempts/Nav/turtle/config/: joint_controllers.yaml  mapper_params_online_async.yaml
Code/Attempts/Nav/turtle/gazebo/: turtle.gazebo.xacro
Code/Attempts/Nav/turtle/launch/: Rlaunch.py  Rlaunchv2.py
Code/Attempts/Nav/turtle/meshes/collision/: Back_right1.STL  Back_right2.STL
Code/Attempts/Nav/turtle/meshes/visual/: Front_left2.STL  base_link.STL
Code/Attempts/Nav/turtle/src/: diff_publisher.py  ros2_control.xacro  velocity_publisher.py
Code/Attempts/Nav/turtle/urdf/: URDF1.urdf.xacro
Code/Attempts/RobotControl/: ros2_control.xacro  velocity_publisher.py
Code/Attempts/Slam/: costmap_parameter.yaml  map.pgm  map.yaml  map1.pgm  map1.yaml  map1_WallWithRock.pcd  mapToPgm.py  map_wallWithObsticals.pcd  map_wallWithRock2.pcd
Code/Attempts/URDF/: URDF1.sdf  Urdf.txt
Code/Attempts/VisualRec/: rgb2.txt
Code/Attempts/World/: gazebo
Code/Attempts/rosgraph/: pose_graph.g2o
Design Files/: README.md
Design Files/Meshes/collision/: Back_left1.STL  Back_left2.STL
Design Files/Meshes/visual/: FrontLWheel.STL  FrontRWheel.STL
Reports/: readme
Reports/Assignment1/: ELEC330Assignment1Report.docx
Reports/Assignment2/SupportiveMaterial/: final.pcd  frames_2024-12-13_15.20.26.gv
Reports/Assignment3/supportMaterial/Frames/: frames_2025-05-09_15.41.51.gv
Reports/Assignment3/supportMaterial/MappingResult/: dae2.pgm  map1.pgm  map1.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml  map4.yaml
Videos/: readme
Videos/Assignment3/: AutoExplore_StuckByOdomDrift.webm
